<resources>
    <string name="app_name">Nvrsty</string>
    <string name="title_activity_tela_inicial">Nvrsty</string>
    <string name="btn_disciplinas">Disciplinas</string>
    <string name="btn_eventos">Eventos</string>
    <string name="title_activity_lista_materias">Matérias</string>
    <string name="title_activity_cadastrar_horario">Cadastrar horário</string>
    <string name="title_activity_cadastrar_evento">Cadastrar evento</string>
    <string name="title_activity_cadastrar_disciplina">Cadastrar disciplina</string>

    <string name="exibicao_horario">%1$d:%2$d</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_confirmar">Confirmar</string>
    <string name="nome_disciplina">Nome da disciplina</string>
    <string name="disciplina_relacinada">Disciplina relacionada</string>
    <string name="data">Data</string>
    <string name="nome_professor">Nome do professor</string>
    <string name="img_horario">Horário</string>
    <string name="img_lugar">Localização</string>
    <string name="horario">Horário</string>
    <string name="dia_semana">Dia da semana</string>
    <string name="bloco">Bloco</string>
    <string name="observacoes">Observações</string>
    <string name="sala">Sala</string>
    <string name="hora_inicio">Horário inicial</string>
    <string name="hora_fim">Horário final</string>

    <string name="sigla">Sigla</string>
    <string name="frequencia">Frequência</string>
    <string name="cor">Cor</string>
    <string name="decremento">Decremento</string>
    <string name="incremento">Incremento</string>
    <string name="qt_unidades">Quantas unidades?</string>
    <string name="disciplinas_empty_view">Você ainda não adicionou nenhuma disciplina\nClique no + para adicionar.</string>
    <string name="horarios_empty_view">Você ainda não adicionou nenhum horário\nClique no + para adicionar.</string>
    <string name="eventos_empty_view">Você ainda não adicionou nenhum evento\nClique no + para adicionar.</string>
    <string name="title_activity_lista_eventos">Eventos</string>
    <string name="filtrar">Filtrar</string>
    <string name="filtro_titulo">Filtrar:</string>
    <string name="disciplina">Por disciplina</string>
    <string name="filtro_dia">Por dia</string>
    <string name="cancelar">cancelar</string>
    <string name="adicionar_horario_manual">Adicionar horário manualmente</string>
    <string name="horarios_preestabelecidos">Horários preestabelecidos</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="confirmar_cancelamento">Confirmar cancelamento</string>
    <string name="confirmar_cancelar_cadastro">Você tem certeza que deseja cancelar o cadastro?</string>
    <string name="adicionar_disciplina">Adicionar nova disclipina</string>
    <string name="escolher_horario_inicial">Escolha um horário inicial</string>
    <string name="escolher_horario_final">Escolha um horário final</string>
    <string name="confirmar_cancelar_cadastro_horario">Você tem certeza que deseja cancelar o cadastro do horário?</string>
    <string name="confirmar_cancelar_cadastro_lembrete">Você tem certeza que deseja cancelar o cadastro do lembrete?</string>
    <string name="titulo_lembrete">Título</string>
    <string name="lembrete">Lembrete</string>
    <string name="momento_txt">Hora do dia</string>
    <string name="hora_txt">00:00</string>
    <string name="title_activity_cadastrar_lembrete">Cadastrar lembrete</string>
    <string name="title_activity_lista_lembretes">Lembretes</string>

</resources>
