<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nvrsty.activities.CadastrarEvento">

    <TextView
        android:id="@+id/tv_materia_relacionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/disciplina_relacinada"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_materia_relacionada"
        android:layout_below="@+id/tv_materia_relacionada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/cp_materia_relacionada"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/cp_data"
        android:editable="false"
        android:layout_below="@+id/tv_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/cp_materia_relacionada"
        android:layout_alignLeft="@+id/cp_horario"
        android:layout_alignStart="@+id/cp_horario" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/cp_horario"
        android:editable="false"
        android:layout_alignBottom="@+id/cp_data"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/bloco"
        android:id="@+id/textView5"
        android:layout_below="@+id/cp_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_bloco"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/cp_data"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_alignEnd="@+id/cp_data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sala"
        android:id="@+id/textView7"
        android:layout_above="@+id/cp_bloco"
        android:layout_alignLeft="@+id/cp_horario"
        android:layout_alignStart="@+id/cp_horario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cp_sala"
        android:layout_alignBottom="@+id/cp_bloco"
        android:layout_alignLeft="@+id/textView7"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignRight="@+id/cp_horario"
        android:layout_alignEnd="@+id/cp_horario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/observacoes"
        android:id="@+id/textView8"
        android:layout_below="@+id/cp_bloco"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:imeOptions="normal"
        android:maxEms="10"
        android:maxLength="240"
        android:gravity="start|top"
        android:id="@+id/cp_observacoes"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/cp_sala"
        android:layout_alignEnd="@+id/cp_sala"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
